--- a/projet_THP/src/main/resources/application.properties
+++ b/projet_THP/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 
+spring.datasource.url=jdbc:mysql://localhost:3306/u984373661_prem_db?createDatabaseIfNotExist=true&characterEncoding=utf-8&serverTimezone=UTC
+spring.datasource.username=u984373661_treza88
+spring.datasource.password=Basededonnée59
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto= create-drop
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+# pour la connexion avec la base :
+spring.datasource.connectionProperties=useUnicode=true;characterEncoding=utf-8;
+# Pour les requêtes http
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
