--- a/projet_THP/src/main/resources/application.properties
+++ b/projet_THP/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/u984373661_prem_db?createDatabaseIfNotExist=true&characterEncoding=utf-8&serverTimezone=UTC
-spring.datasource.username=u984373661_treza88
-spring.datasource.password=Basededonnée59
+#spring.datasource.username=u984373661_treza88
+#spring.datasource.password=Basededonnée59
+spring.datasource.username=root
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.hibernate.ddl-auto= create-drop
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 # pour la connexion avec la base :
 spring.datasource.connectionProperties=useUnicode=true;characterEncoding=utf-8;
