Nom tables snake case Spring Boot

--- a/projet_THP/src/main/resources/application.properties
+++ b/projet_THP/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.datasource.connectionProperties=useUnicode=true;characterEncoding=utf-8;
 # Pour les requêtes http
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
