--- a/projet_THP/src/main/resources/application.properties
+++ b/projet_THP/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/u984373661_prem_db?createDatabaseIfNotExist=true&characterEncoding=utf-8&serverTimezone=UTC
-#spring.datasource.username=u984373661_treza88
-#spring.datasource.password=Basededonnée59
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://145.14.151.151:3306/u984373661_prem_db?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
+spring.datasource.username=u984373661_treza88
+spring.datasource.password=MotDePasse59
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.hibernate.ddl-auto= create-drop
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 # pour la connexion avec la base :
 spring.datasource.connectionProperties=useUnicode=true;characterEncoding=utf-8;
