--- a/projet_THP/pom.xml
+++ b/projet_THP/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>fr.synergy</groupId>
 	<artifactId>projet_THP</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+
 	<name>projet_THP</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
@@ -54,7 +55,6 @@
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
-			<version>2.3.0</version>
 		</dependency>
 
 		<dependency>
@@ -65,14 +65,16 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>com.fasterxml.jackson.core</groupId>-->
-<!--			<artifactId>jackson-databind</artifactId>-->
-<!--			<version>2.2.3</version>-->
-<!--		</dependency>-->
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity6</artifactId>
+			<!-- Temporary explicit version to fix Thymeleaf bug -->
+			<version>3.1.1.RELEASE</version>
 		</dependency>
 	</dependencies>
 
@@ -90,6 +92,17 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<uriEncoding>UTF-8</uriEncoding>
+					<path>/projet_THP</path>
+					<update>true</update>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
