--- a/projet_THP/src/main/resources/application.properties
+++ b/projet_THP/src/main/resources/application.properties
@@ -1,16 +1,14 @@
-
-spring.datasource.url=jdbc:mysql://145.14.151.151:3306/u984373661_prem_db?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=${DATASOURCE_URL}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
-spring.datasource.username=u984373661_treza88
-spring.datasource.password=MotDePasse59
+spring.datasource.username=${DATA_USER}
+spring.datasource.password=${DATA_PWD}
 #spring.datasource.username=root
 #spring.datasource.password=root
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.hibernate.ddl-auto= create-drop
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 # pour la connexion avec la base :
 spring.datasource.connectionProperties=useUnicode=true;characterEncoding=utf-8;
-# Pour les requêtes http
-spring.http.encoding.charset=UTF-8
-spring.http.encoding.enabled=true
+# Pour prendre en compte le fichier .env qui contient les mot de passe et donnees sensible
+spring.config.import=optional:file:.env[.properties]
+#server.port=8081
