--- a/projet_THP/src/main/resources/application.properties
+++ b/projet_THP/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.datasource.connectionProperties=useUnicode=true;characterEncoding=utf-8;
 # Pour prendre en compte le fichier .env qui contient les mot de passe et donnees sensible
 spring.config.import=optional:file:.env[.properties]
 #server.port=8081
+
+spring.security.filter.order=10
