Approfondissement de la sécurité

--- a/projet_THP/src/main/resources/application.properties
+++ b/projet_THP/src/main/resources/application.properties
@@ -11,6 +11,6 @@ spring.jpa.show-sql=true
 spring.datasource.connectionProperties=useUnicode=true;characterEncoding=utf-8;
 # Pour prendre en compte le fichier .env qui contient les mot de passe et donnees sensible
 spring.config.import=optional:file:.env[.properties]
-#server.port=8081
+server.port=${PORT}
 
 spring.security.filter.order=10
